# thesis

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.MD  pyproject.toml
notebooks/: Drift_AISTATS.ipynb  experiments.ipynb  single_experiments.ipynb  timeseries.ipynb
sltns/: __init__.py
sltns/data/: __init__.py  _data.py
sltns/discrepency/: __init__.py  _disc.py
sltns/experiment/: _exp.py
sltns/optimization/: __init__.py  _opt.py
sltns/plots/: __init__.py  _plots.py
