[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sltns"
version = "0.0.1"
description = "Statistical Learning under Non-stationarity"
authors = [
  { name = "Tobias Brock" },
]

license = { text = "LICENSE"}
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
]
requires-python = ">=3.10,<3.13"

# Core dependencies required to run the package
dependencies = [
  "matplotlib==3.9.2",
  "numpy==1.24.4",
  "pandas==2.2.2",
  "scikit-learn==1.5.1",
]

[project.optional-dependencies]
# Dependencies for documentation
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.5.43",
  "mkdocstrings==0.26.2",
  "mkdocstrings-python==1.12.2"
]

# Dependencies for testing
tests = [
  "pytest==8.3.2",
  "unittest",
  "coverage",
]

# Development dependencies (for linting, pre-commit hooks, and other dev tools)
dev = [
  "ruff==0.6.3",
  "pre-commit",
  "py-cpuinfo==9.0.0",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
line-length = 88
exclude = [
  ".git",
  "__pycache__",
  ".ruff_cache",
  ".pt",
]
lint.select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes errors
  "W",    # pycodestyle warnings
  "D",    # pydocstyle errors
  "I",    # import conventions (isort)
  "B",    # flake8-bugbear errors
  "C4",   # flake8-comprehensions errors
  "NPY",  # NumPy style checks
]
lint.ignore = [
  "E203",  # Whitespace before ':', handled by Black
  "E731",  # Do not assign a lambda expression, use a def
  "E741",  # Do not use variables named 'l', 'O', or 'I'
  "E721",  # Use 'isinstance()' instead of comparing types directly
  "F841",  # Local variable assigned to but never used
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["periomod"]
force-sort-within-sections = true

# [tool.docformatter]
# wrap-summaries = 88
# wrap-descriptions = 88
# pre-summary-newline = true
# style = "google"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.flit.sdist]
include = [
  "LICENSE",
  "README.md",
]
